# aifu

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
config/: settings.py  vector_store.py
documents/: docs.py
